eventos en el Backend

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,18 @@
     <title>html inicial </title>
 <body>
     <h1>titulo de inicio </h1>
+
+    <button id="btn">SI</button>
+
+    <script>
+
+        const btn = document.querySelector('#btn');
+
+        btn.addEventListener('click', function(){
+
+            alert('Hola mundo')
+        })
+    </script>
+
 </body>
 </html>
